--- a/GasStation/.classpath
+++ b/GasStation/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/user/Documents/לימודים/ג&apos;אוה ברשת/jars/JavaFX/controlsfx-8.0.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Documents/לימודים/ג&apos;אוה ברשת/jars/jdbc/mysql-connector-java-5.1.13-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
