Creat the client GUI

--- a/GasStation/.classpath
+++ b/GasStation/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Client"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/user/Documents/לימודים/ג&apos;אוה ברשת/jars/JavaFX/controlsfx-8.0.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/user/Documents/לימודים/ג&apos;אוה ברשת/jars/jdbc/mysql-connector-java-5.1.13-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Documents/לימודים/ג&apos;אוה ברשת/jars/JavaFX/javafx-dialogs-0.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
